--- a/output/authors.html
+++ b/output/authors.html
@@ -12,15 +12,6 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/rss.xml" type="application/rss+xml" rel="alternate" title="jarv RSS Feed" />
     <script src="http://api.html5media.info/1.1.8/html5media.min.js"></script>
-<script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-78464-7', 'auto');
-      ga('send', 'pageview');
-    </script>
 </head>
 
   <body>
@@ -31,7 +22,7 @@
   <ul>
     <li><a href="http://github.com/jarv"><i class="fa fa-github-square"></i></a></li>
     <li><a href="https://twitter.com/__jarv__"><i class="fa fa-twitter-square"></i></a></li>
-    <li><a href="./rss.xml"><i class="fa fa-rss-square"></i></a></li>
+    <li><a href="http://localhost:8000/rss.xml"><i class="fa fa-rss-square"></i></a></li>
     <li><a href="mailto:john@jarv.org"><i class="fa fa-envelope-square"></i></a></li>
   </ul>
 </div>
@@ -46,7 +37,7 @@
 
     <div class="content">    <h1>Authors on jarv</h1>
 
-    <ul>        <li><a href="./author/jarv.html">jarv</a> (16)</li>
+    <ul>        <li><a href="http://localhost:8000/author/jarv.html">jarv</a> (16)</li>
     </ul>
 </div>
 
